RESOLVED FIXED238823
Call Structure::get instead of Structure::getConcurrently on the mutator thread
https://bugs.webkit.org/show_bug.cgi?id=238823
Summary Call Structure::get instead of Structure::getConcurrently on the mutator thread
Saam Barati
Reported 2022-04-05 11:33:08 PDT
...
Attachments
patch (39.40 KB, patch)
2022-04-05 18:58 PDT, Saam Barati
ysuzuki: review+
patch for landing (39.61 KB, patch)
2022-04-06 11:05 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2022-04-05 18:58:42 PDT
Yusuke Suzuki
Comment 2 2022-04-05 19:56:55 PDT
Comment on attachment 456774 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=456774&action=review r=me > Source/JavaScriptCore/runtime/JSObject.h:1418 > + case Concurrency::MainThread: Let's add `ASSERT(!isCompilationThread() && !Thread::mayBeGCThread());` assertion. > Source/JavaScriptCore/runtime/Structure.h:520 > + case Concurrency::MainThread: Let's add `ASSERT(!isCompilationThread() && !Thread::mayBeGCThread());` assertion. > Source/JavaScriptCore/runtime/Structure.h:530 > + case Concurrency::MainThread: Let's add `ASSERT(!isCompilationThread() && !Thread::mayBeGCThread());` assertion.
Saam Barati
Comment 3 2022-04-06 11:05:23 PDT
Created attachment 456839 [details] patch for landing
EWS
Comment 4 2022-04-06 12:36:48 PDT
Committed r292493 (249341@main): <https://commits.webkit.org/249341@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456839 [details].
Radar WebKit Bug Importer
Comment 5 2022-04-06 12:37:17 PDT
Note You need to log in before you can comment on or make changes to this bug.