Source/JavaScriptCore/runtime/CachedSpecialPropertyAdaptiveStructureWatchpoint.cpp
@@ -42,7 +42,7 @@ CachedSpecialPropertyAdaptiveStructureWatchpoint::CachedSpecialPropertyAdaptiveS
 
 void CachedSpecialPropertyAdaptiveStructureWatchpoint::install(VM& vm)
 {
-    RELEASE_ASSERT(m_key.isWatchable());
+    RELEASE_ASSERT(m_key.isWatchable(PropertyCondition::MakeNoChanges));
 
     m_key.object()->structure(vm)->addTransitionWatchpoint(this);
 }
